--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM mysql:latest
 # 초기화 SQL 
 # /docker-entrypoint-initdb.d
 COPY bak.sql /docker-entrypoint-initdb.d/
-# COPY grant.sql /docker-entrypoint-initdb.d/
+COPY grant.sql /docker-entrypoint-initdb.d/
 
 # 환경변수 
 ENV MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
